# are-we-recipe-v1-yet

./: .env  .gitignore  Cargo.toml  README.md  feedstock-stats.toml  index.html  package.json  pixi.toml
.github/workflows/: data-collection.yml  deploy.yml
compress-stats/: Cargo.toml
compress-stats/src/: main.rs
crunch-data/: Cargo.toml
crunch-data/src/: main.rs
data-collector/: Cargo.toml
data-collector/src/: config.rs  lib.rs  main.rs
data-collector/src/git/: mod.rs  sparse_checkout.rs
data-collector/src/models/: cli.rs  feedstock.rs  mod.rs  recipe_types.rs
data-collector/src/stats/: analytics.rs  attribution.rs  attribution_pipeline.md  collector.rs  file_processor.rs  mod.rs
data-collector/tests/: attribution_test.rs  clone_attribution_test.rs
src/: main.rs
web/: Cargo.toml  Trunk.toml  build.rs  index.html  input.css  package.json  pnpm-lock.yaml
web/src/: main.rs
