[package]
name = "data-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.0"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }