[package]
name = "are-we-recipe-v1-yet-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
serde = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

[build-dependencies]
toml = { workspace = true }